--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation("androidx.recyclerview:recyclerview:1.2.1")
 
+    //inapp billing
+    implementation 'com.anjlab.android.iab.v3:library:2.0.3'
+
     //paging 3
     def paging_version = "3.1.0"
     implementation("androidx.paging:paging-runtime-ktx:$paging_version")
